--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-prismic": "^1.1.1",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6"
   }
 }
