--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@11ty/eleventy": "^1.0.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.10",
+    "@apollo/client": "^3.3.10",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
-    "apollo-link-prismic": "^1.1.1",
+    "apollo-link-prismic": "^1.0.8",
     "graphql": "^16.3.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "node-fetch": "^3.2.3"
   }
 }
